syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-user/api/proto/v1";

message SetUserNameRequest {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
}

message SetUserNameResponse {
  string message = 1;
}
